@@ -1,10 +1,9 @@
 package vision2cloud.argon.controller.user.auth;
 
-import sun.misc.BASE64Decoder;
-
 import javax.crypto.Cipher;
 import javax.crypto.spec.IvParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
+import java.util.Base64;
 
 public class Decrypt {
     public Decrypt(){}
@@ -16,7 +15,7 @@ public class Decrypt {
             String key = "ab4q8g6j5j7o5s63";
             String iv = "8q7d4g86s2f4h26s";
 
-            byte[] encrypted1 = new BASE64Decoder().decodeBuffer(data);
+            byte[] encrypted1 = Base64.getDecoder().decode(data);
 
             Cipher cipher = Cipher.getInstance("AES/CBC/NoPadding");
             SecretKeySpec keyspec = new SecretKeySpec(key.getBytes(), "AES");
